<resources>
    <string name="app_name">智慧城管</string>
    <!--登录-->
    <string name="login_01">手机号</string>
    <string name="login_02">密  码</string>
    <string name="login_03">登  录</string>
    <string name="login_05">确认密码</string>
    <string name="login_04">还没有账号，去注册</string>
    <string name="login_06">注    册</string>
    <string name="login_07">已有账号，去注册</string>
    <!--首页-->
    <string name="main_01">信息列表</string>
    <string name="main_02">搜集信息</string>
    <string name="main_03">个人中心</string>
    <!--采集信息-->
    <string name="info_01">采集信息表</string>
    <string name="info_02">基本信息</string>
    <string name="info_03">请选择</string>
    <string name="info_04">详细信息</string>
    <string name="info_05">经纬度：</string>
    <string name="info_06">上传照片</string>
    <string name="info_07">上传视频</string>
    <string name="info_08">照片</string>
    <string name="info_09">视频</string>
    <string name="info_10">地址：</string>
    <!--个人信息-->
    <string name="mine_01">头像</string>
    <string name="mine_02">姓名</string>
    <string name="mine_03">电话</string>
    <string name="mine_04">职位</string>
    <string name="mine_05">工作年限</string>
    <string name="mine_06">身份证号</string>
    <string name="mine_07">修改个人信息</string>
    <!--信息列表-->
    <string name="infolist_01">请输入想要搜索的部件的详细信息</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


















    <!--导航-->
    <string name="menu_home">现场寻查</string>
    <string name="menu_main">首页</string>
    <string name="menu_weather">天气预报</string>
    <string name="menu_card">考勤打卡</string>
    <string name="menu_mine">足迹</string>
    <string name="menu_chat">群聊</string>
    <string name="menu_video">视频监控</string>

    <string name="foot_yessign">已签到</string>
    <string name="foot_nosign">未签到</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="no_read_message">"···"</string>
    <string name="main_name">太原市高速公路管理所考情系统</string>
    <string name="main_sign">签到</string>


    <string name="main_sign_time">签到时间:</string>
    <string name="main_sign_time1">00:00</string>

    <string name="main_sign_address">签到地址:</string>
    <string name="main_sign_address1">山西省太原市</string>
    <string name="main_sign_ed">请填写签到备注</string>
    <string name="main_sign_submit">提交</string>



    <string name="longin_title">移动互联——高速公路室外安全生产系统</string>
    <string name="longin_name">请输入姓名</string>
    <string name="longin_phonenumber">请输入手机号</string>
    <string name="longin_code">验证码</string>
    <string name="longin_code_in">发送</string>
    <string name="longin_submit">提交</string>
    <string name="sendcode">发送验证码</string>
    <string name="loginactivity_password_wait">后重新发送</string>


    <string name="foot_title">当前施工队</string>
    <string name="foot_time">时间</string>

    <string name="login_phone">手机号</string>
    <string name="reg_idcard">身份证号</string>
    <string name="login_password">密  码</string>
    <string name="login_name">姓  名</string>
    <string name="login_login">登录</string>
    <string name="reg_login_but">注册</string>
    <string name="login_reg">新用户注册</string>
    <string name="reg_login">老用户注册</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>

    <string name="find_item_photo">发布照片</string>
    <string name="find_item_video">发布视频</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>






    <string name="hello">Hello World, OMXVideoActivity!</string>
    <string name="start_rec">开始传输</string>
    <string name="stop_rec">停止传输</string>
    <string name="save">开始录像</string>
    <string name="stop_save">停止录像</string>
    <string name="shot_pic">拍照</string>
    <string name="alarm">报警</string>

    <string name="def_server_addr">192.168.16.8</string>
    <string name="def_cmd_port">17725</string>
    <string name="def_data_port">728</string>
    <string name="def_transmode">TCP</string>
    <string name="def_ftp_user">ftp</string>
    <string name="def_ftp_password">ftp</string>
    <string name="def_ftp_port">21</string>
    <string name="def_size">1280x720</string>
    <string name="def_fps">30</string>
    <string name="def_bitrate">1500</string>
    <string name="def_gop">50</string>
    <string name="def_flashlight">off</string>
    <string name="def_pic_size">1280x720</string>
    <string name="def_pic_flashlight">off</string>
    <string name="def_save_size">1280x720</string>
    <string name="def_save_bitrate">8000</string>
    <string name="def_save_dir">/PICS</string>
    <string name="def_save_filesize">64</string>
    <string name="def_audio_type">AAC</string>
    <string name="def_osd_devname">无线高清视频</string>

    <string name="def_netclient_addr"></string>
    <string name="def_netclient_port">8310</string>
    <string name="def_netclient_user">admin</string>
    <string name="def_netclient_pswd">admin</string>
    <string name="def_netclient_latency">3000</string>
</resources>
