<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/new_login_bg"
    android:paddingTop="30dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/height_25"
        android:layout_marginRight="@dimen/height_25"
        android:layout_marginTop="@dimen/height_160"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_01"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                />
            <EditText
                android:id="@+id/user_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:background="@drawable/login_bg"
                android:textColor="@color/white"
                android:padding="@dimen/height_5"
                android:layout_marginLeft="@dimen/height_80"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/height_15"
            >
            <EditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:background="@drawable/login_bg"
                android:textColor="@color/white"
                android:padding="@dimen/height_5"
                android:layout_marginLeft="@dimen/height_80"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_02"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/height_15"
            >
            <EditText
                android:id="@+id/confirm_pass_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:background="@drawable/login_bg"
                android:textColor="@color/white"
                android:padding="@dimen/height_5"
                android:layout_marginLeft="@dimen/height_80"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_05"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                />

        </RelativeLayout>
        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn"
            android:layout_marginLeft="@dimen/height_15"
            android:layout_marginRight="@dimen/height_15"
            android:layout_marginTop="@dimen/height_60"
            android:text="@string/login_06"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            />
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_07"
            android:layout_gravity="right"
            android:textColor="@color/main_blue"
            android:layout_marginRight="@dimen/height_15"
            android:layout_marginTop="@dimen/height_10"
            />
    </LinearLayout>


</LinearLayout>
