<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/photo_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_10"
        android:layout_marginRight="@dimen/height_10"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mine_01"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            />
        <ImageView
            android:id="@+id/photo_img"
            android:layout_width="@dimen/height_45"
            android:layout_height="@dimen/height_45"
            android:background="@mipmap/icon_defalut_img"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <View
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_5"
    android:background="@color/main_bg"
    />
    <LinearLayout
        android:id="@+id/name_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_10"
        android:layout_marginRight="@dimen/height_10"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mine_02"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="张三"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color"
           />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5"
        android:background="@color/main_bg"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_10"
        android:layout_marginRight="@dimen/height_10"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mine_03"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15234077743"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5"
        android:background="@color/main_bg"
        />
    <LinearLayout
        android:id="@+id/position_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_10"
        android:layout_marginRight="@dimen/height_10"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mine_04"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:id="@+id/position_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="城管"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5"
        android:background="@color/main_bg"
        />
    <LinearLayout
        android:id="@+id/nums_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_10"
        android:layout_marginRight="@dimen/height_10"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mine_05"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/nums_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3年"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5"
        android:background="@color/main_bg"
        />
    <LinearLayout
        android:id="@+id/idcard_lv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_45"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/height_10"
        android:layout_marginRight="@dimen/height_10"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/mine_06"
            android:textColor="@color/text_color"
            android:layout_gravity="center_vertical"
            android:id="@+id/textView5" />

        <TextView
            android:id="@+id/idcard_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="14235565225"
            android:layout_gravity="center_vertical"
            android:textColor="@color/text_color"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_5"
        android:background="@color/main_bg"
        />
    <Button
        android:id="@+id/sub_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:layout_marginLeft="@dimen/height_35"
        android:layout_marginRight="@dimen/height_35"
        android:layout_marginTop="@dimen/height_40"
        android:layout_marginBottom="@dimen/height_20"
        android:text="@string/mine_07"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18"
        />
</LinearLayout>