<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/yellow"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/yellow"
            android:text="@string/menu_video"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:id="@+id/id_video_tv"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:text="@string/menu_home"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/yellow"
            android:text="@string/menu_weather"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:layout_marginRight="10dp"
            android:id="@+id/id_weather_tv"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_time"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:text="2014年5月8日"
            android:id="@+id/id_date_tv"
            />

        <TextView
            android:id="@+id/id_nameTV"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_my"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/background"
        />
    <TextView
        android:id="@+id/id_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="15sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <com.amap.api.maps2d.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        >
        <LinearLayout
            android:id="@+id/id_Sign2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:background="@drawable/bg_circle"
            android:gravity="center_horizontal|center_vertical"
            >
            <TextView
                android:text="@string/menu_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/id_time2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="00:00:00"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/id_Sign"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:background="@drawable/bg_circle"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:text="@string/menu_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/id_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="00:00:00"
                android:textColor="@color/white"
                />


        </LinearLayout>

      <!--  <Button
            android:id="@+id/id_Sign"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/bg_circle"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="@string/main_sign"
            />-->


    </LinearLayout>




</LinearLayout>
